# sentinel2-spectraldex

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  sentinel2_pipeline.ipynb
.github/workflows/: ci.yml
sentinel2/: __init__.py  aoi.py  config.py  download.py  indices.py  pipeline.py  search.py
tests/: test_indices.py  test_search.py
